--- a/src/pages/create/create.html
+++ b/src/pages/create/create.html
@@ -3,7 +3,7 @@
     <ion-title>Создание игры</ion-title>
     <ion-buttons start>
       <button ion-button (click)="dismiss()">
-        <span ion-text color="primary" showWhen="ios">Cancel</span>
+        <span ion-text color="primary" showWhen="ios">Отменить</span>
         <ion-icon name="md-close" showWhen="android, windows"></ion-icon>
       </button>
     </ion-buttons>
@@ -11,4 +11,23 @@
 </ion-header>
 
 <ion-content padding>
+  <ion-list>
+    <ion-list-header>
+      Название игры
+    </ion-list-header>
+    <ion-item>
+      <ion-input type="text" [(ngModel)]="name"></ion-input>
+    </ion-item>
+  </ion-list>
+  <ion-list>
+    <ion-list-header>
+      Количество игроков – {{ usersCount }}
+    </ion-list-header>
+    <ion-item>
+      <ion-range min="2" max="10" step="1" snaps="true" [(ngModel)]="usersCount" color="primary">
+        <ion-icon range-right color="primary" name="person-add"></ion-icon>
+      </ion-range>
+    </ion-item>
+  </ion-list>
+  <button ion-button [color]="nameIsEmpty() ? 'light' : 'primary'" (click)="nameIsEmpty() || createGame()" block>Создать</button>
 </ion-content>
