--- a/src/pages/game/game.html
+++ b/src/pages/game/game.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Игра
+      Игра «{{ game.name }}»
     </ion-title>
   </ion-navbar>
 </ion-header>
